# FRE2026_Floribot4.0_Docker

./: README.md
base/: Dockerfile
compose/: .env.example  docker-compose.yml
gazebo/: Dockerfile  entrypoint.sh
gazebo/ros2_ws/src/floribot_gz_bringup/: package.xml
gazebo/ros2_ws/src/floribot_gz_bringup/launch/: maize_world.launch.py  maize_world_with_floribot.launch.py  spawn_floribot.launch.py
gazebo/ros2_ws/src/floribot_gz_description/: CMakeLists.txt  package.xml
gazebo/ros2_ws/src/floribot_gz_description/launch/: view_description.launch.py
gazebo/ros2_ws/src/floribot_gz_description/models/: floribot_test.sdf
gazebo/ros2_ws/src/floribot_gz_description/urdf/: Floribot_gz.urdf.xacro
gazebo/ros2_ws/src/sim_backend/: package.xml  setup.py
gazebo/ros2_ws/src/sim_backend/launch/: sim_backend.launch.py
gazebo/ros2_ws/src/sim_backend/sim_backend/: __init__.py  sim_backend_node.py
rviz/: Dockerfile
scripts/: up.sh
sensors/: Dockerfile  entrypoint.sh  start_sensors.sh
stage/: Dockerfile
stage/maize_world/: floribot.inc  maze_field.world
stage/rviz/: floribot_stage.rviz
tasks/: Dockerfile
