<?xml version="1.0"?>
<package format="3">
  <name>floribot_gz_description</name>
  <version>0.0.1</version>
  <description>Gazebo Sim description package for FloriBot 4.0</description>

  <maintainer email="tzimmerman@stud.hs-heilbronn.de">Timo Zimmermann</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
